--- a/staff/francisco-fernandez/cv/index.html
+++ b/staff/francisco-fernandez/cv/index.html
@@ -17,6 +17,11 @@
     </section>
 
     <section>
+            <h2>OBJETIVOS DE CARRERA</h2>
+            <p>Quiero formarme como developer para dejar de tener trabajos malos. Y que solo un puñado de gente sepa como corregir lo que he hecho mal.</p>
+        </section>
+
+    <section>
         <h2>EXPERIENCIA LABORAL</h2>
         <ul>
             <li>Actualmente. Camarero. Camarero en importante cadena de restaurantes de comida rápida </li>
