--- a/staff/francisco-fernandez/lets-talk/lets-talk-app/public/index.html
+++ b/staff/francisco-fernandez/lets-talk/lets-talk-app/public/index.html
@@ -25,6 +25,12 @@
     crossorigin='anonymous'>
   <link rel='stylesheet' href='styles.css'>
   <link href='https://fonts.googleapis.com/css?family=Lobster|Signika' rel='stylesheet'>
+  <style>
+    @font-face {
+      font-family: Product;
+      src: url('./fonts/Product Sans Regular.ttf'), url('./fonts/Product Sans Italic.ttf'), url('./fonts/Product Sans Bold.ttf')
+    }
+  </style>
 </head>
 
 <body>
